--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs"
+									class="menu__link">О
 									нас</a></li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages"
+									class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog"
+									class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -72,12 +75,16 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects"
+									class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates"
+									class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews"
+									class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map"
+									class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
@@ -85,8 +92,10 @@
 						<div class="header__phone"><a href="tel:+7(908)1231213">+7 (908)-123-12-13</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
-							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
+							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  "
+									src="img/icons/Phone.svg" alt=""></a>
+							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img
+									src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
 
@@ -97,8 +106,10 @@
 		<main class="page">
 			<div class="chat">
 				<div class="content__type">
-					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg" alt=""></a>
-					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg" alt=""></a>
+					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone"
+							src="img/icons/Phone.svg" alt=""></a>
+					<a href="https://wa.me/79613091930" class="content__list content-point"><img
+							src="img/icons/whatsapp_logo.svg" alt=""></a>
 				</div>
 				<div data-add class="chat__icon">
 					<img data-add class="open" src="img/icons/Chat.svg" alt="">
@@ -120,7 +131,8 @@
 							<img src="img/pictures/first__screen/001_1920x0_b56_1.webp" alt="">
 						</div>
 						<div class="main__slide swiper-slide">
-							<img src="img/pictures/first__screen/1620778679_70-p-detskie-ploshchadki-proekti-foto-79_1.webp" alt="">
+							<img src="img/pictures/first__screen/1620778679_70-p-detskie-ploshchadki-proekti-foto-79_1.webp"
+								alt="">
 						</div>
 					</div>
 
@@ -172,7 +184,8 @@
 									менеджер сразу с вами свяжется и уточнит детали заказа.</li>
 							</ul>
 						</div>
-						<div class="advantages__picture picture"><img src="img/pictures/aurora-landscaping-baldivis-grove.webp" alt=""></div>
+						<div class="advantages__picture picture"><img
+								src="img/pictures/aurora-landscaping-baldivis-grove.webp" alt=""></div>
 					</div>
 				</div>
 			</section>
@@ -192,7 +205,7 @@
 					<div class="catalog__wrapper swiper-wrapper ">
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/качалки/image 6.png" alt=""></div>
+							<div class="slide__image"><img src="img/rocking/image 6.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -211,7 +224,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/карусели/image 34.png" alt=""></div>
+							<div class="slide__image"><img src="img/carousels/image 34.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -230,7 +243,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/качели/image 39.png" alt=""></div>
+							<div class="slide__image"><img src="img/swing/image 39.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -249,7 +262,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/горки/image 52.png" alt=""></div>
+							<div class="slide__image"><img src="img/slides/image 52.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -268,7 +281,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/песочницы/image 67.png" alt=""></div>
+							<div class="slide__image"><img src="img/sandbox/ 67.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -287,7 +300,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/домики__и__ограждения/image 80.png" alt=""></div>
+							<div class="slide__image"><img src="img/houses/ 80.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -306,7 +319,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/машинки/image 109.png" alt=""></div>
+							<div class="slide__image"><img src="img/cars/ 109.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -326,7 +339,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/игровые__площадки/image 145.png" alt=""></div>
+							<div class="slide__image"><img src="img/gamers/ 145.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -346,7 +359,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/гимнастика/image 177.png" alt=""></div>
+							<div class="slide__image"><img src="img/gymnastic/ 177.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -366,7 +379,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/спорт/image 190.png" alt=""></div>
+							<div class="slide__image"><img src="img/sport/ 190.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -385,7 +398,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/лавочки/image 225.png" alt=""></div>
+							<div class="slide__image"><img src="img/benches/ 225.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -404,7 +417,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/другое/image 262.png" alt=""></div>
+							<div class="slide__image"><img src="img/others/ 262.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -554,7 +567,9 @@
 				<div class="map__container">
 					<div class="map__title title">Мы на карте</div>
 				</div>
-				<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A746c4dd04cf8cb090bbfd8c358e9ae362a56da86d78edb3fdb201d21326cf3e0&amp;source=constructor" width="100%" height="720" frameborder="0"></iframe>
+				<iframe
+					src="https://yandex.ru/map-widget/v1/?um=constructor%3A746c4dd04cf8cb090bbfd8c358e9ae362a56da86d78edb3fdb201d21326cf3e0&amp;source=constructor"
+					width="100%" height="720" frameborder="0"></iframe>
 			</section>
 		</main>
 		<footer class="footer">
@@ -576,9 +591,11 @@
 				<div class="footer__column">
 					<div class="footer__links links">
 
-						<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
+						<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img
+								src="img/icons/whatsapp_logo.svg" alt=""> </a>
 					</div>
-					<a data-goto-header data-goto="main" class="footer__goTop footer-text">Вернуться в начало <img src="img/icons/Chevron_Up.svg" alt=""> </a>
+					<a data-goto-header data-goto="main" class="footer__goTop footer-text">Вернуться в начало <img
+							src="img/icons/Chevron_Up.svg" alt=""> </a>
 				</div>
 			</div>
 		</footer>
