--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/sandbox/ 67.png" alt=""></div>
+							<div class="slide__image"><img src="img/sandbox/image 67.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -300,7 +300,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/houses/ 80.png" alt=""></div>
+							<div class="slide__image"><img src="img/houses/image 80.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -319,7 +319,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/cars/ 109.png" alt=""></div>
+							<div class="slide__image"><img src="img/cars/image 109.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -339,7 +339,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/gamers/ 145.png" alt=""></div>
+							<div class="slide__image"><img src="img/gamers/image 145.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -359,7 +359,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/gymnastic/ 177.png" alt=""></div>
+							<div class="slide__image"><img src="img/gymnastic/image 177.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -379,7 +379,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/sport/ 190.png" alt=""></div>
+							<div class="slide__image"><img src="img/sport/image 190.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -398,7 +398,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/benches/ 225.png" alt=""></div>
+							<div class="slide__image"><img src="img/benches/image 225.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
@@ -417,7 +417,7 @@
 						</div>
 						<div class="catalog__slide swiper-slide">
 
-							<div class="slide__image"><img src="img/others/ 262.png" alt=""></div>
+							<div class="slide__image"><img src="img/others/image 262.png" alt=""></div>
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
