--- a/houses.html
+++ b/houses.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221106205210">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221107161211">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,6 +76,8 @@
 									работы</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							</li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
 							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
@@ -770,7 +772,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221106205210"></script>
+	<script src="js/app.min.js?_v=20221107161211"></script>
 </body>
 
 </html>
